--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.2",
     "next": "12.1.0",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^3.0.23"
@@ -26,7 +26,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "typescript": "4.5.5"
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "typescript": "^4.6.0"
   }
 }
